Fix HTML encoding issues in index.htmlch

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <main id="mainBody">
       <div class="details">
         <div id="image">
-          <img class="profile-image" src="/elite.png" />
+          <img class="profile-image" src="elite.png" />
         </div>
         <div id="main-details">
           <div class="detail-items">
@@ -139,3 +139,4 @@
     <footer id="footerMain"></footer>
   </body>
 </html>
+
